# initialize_output_directories

./: .gitignore  .pre-commit-config.yaml  Makefile.am  README.md  configure  configure.ac  extensions.config.yaml  generate.bash  initialize_output_directories-1.0.pc.in
initialize_output_directories/: cargs.cc  cargs.h  main.cc  tracking_files.cc  tracking_files.h  utilities.cc  utilities.h  yaml_reader.cc  yaml_reader.h
tests/: balding_trend.config.yaml  empty_covariates.config.yaml  empty_covariates.test  fixed.test  panc_cancer.female.config.yaml
tests/fixed_examples/bq_bmi_curr_co/East_Asian/BOLTLMM/: bq_bmi_curr_co.Oncoarray.boltlmm.phenotype_selected
tests/fixed_examples/bq_bmi_curr_co/European/BOLTLMM/: bq_bmi_curr_co.GSA_batch3.boltlmm.covariates_selected
tests/fixed_examples/j_panc_cancer_female/East_Asian/SAIGE/: j_panc_cancer_female.Oncoarray.saige.categories  j_panc_cancer_female.Oncoarray.saige.control-exclusion
tests/fixed_examples/j_panc_cancer_female/European/SAIGE/: j_panc_cancer_female.GSA_batch1.saige.id_mode  j_panc_cancer_female.GSA_batch1.saige.phenotype_selected  j_panc_cancer_female.GSA_batch3.saige.control-inclusion  j_panc_cancer_female.Omni25.saige.control-exclusion  j_panc_cancer_female.Omni25.saige.control-inclusion  j_panc_cancer_female.Omni25.saige.phenotype_dataset  j_panc_cancer_female.Oncoarray.saige.covariates_selected
tests/fixed_examples/sqx_balding_trend_o/European/SAIGE/comparison1/: sqx_balding_trend_o.GSA_batch4.saige.phenotype_selected
tests/fixed_examples/sqx_balding_trend_o/European/SAIGE/comparison2/: sqx_balding_trend_o.GSA_batch3.saige.id_mode  sqx_balding_trend_o.Oncoarray.saige.categories
tests/fixed_examples/sqx_balding_trend_o/European/SAIGE/comparison3/: sqx_balding_trend_o.GSA_batch2.saige.categories  sqx_balding_trend_o.Oncoarray.saige.covariates_selected
tests/fixed_examples/sqx_balding_trend_o/European/SAIGE/comparison4/: sqx_balding_trend_o.Oncoarray.saige.categories
